2007-12-18  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): do not load modules by default

2007-12-17  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (interactive_repl): handle exceptions for parser on
	line-feeds

	* src/ports.c (native_write): write readable representation


2007-12-16  Ales Hakl  <ales at hakl dot net>

	* src/load.c (dfsch_load_so): return some meaningful value

2007-12-15  Ales Hakl  <ales at hakl dot net>

	* src/system.c (native_encode_universal_time):
	encode-universal-time	
	(native_iso_format_time): iso-format-time function

2007-12-14  Ales Hakl  <ales at hakl dot net>

	* src/system.c (native_decode_universal_time):
	decode-universal-time function
	(native_get_decoded_time): get-decoded-time

	* src/ports.c (file_port_type): partial implementation file-port
	(file_port_seek): seek! and tell

2007-12-13  Ales Hakl  <ales at hakl dot net>

	* src/parse.c (dfsch_parser_read_from_port): fixed read

	* src/ports.c (dfsch_port_write_buf): there is no reason for
	write-buf! to return anything
	(string_output_port_type): string-output-port
	(string_input_port_type): partial implementation of string-input-port
	(eof_object_type): eof-object

2007-12-12  Ales Hakl  <ales at hakl dot net>

	* src/ports.c (dfsch__port_native_register): reading from ports

	* dfsch/magic.h (DFSCH_UNWIND): initialize dfsch___caught

2007-12-11  Ales Hakl  <ales at hakl dot net>

	* dfsch/ports.h: added declarations

	* src/ports.c: null-port and display and write

	* src/dfsch.c: use saprintf()

	* src/control.c: rewritten all special forms as true special forms

	* src/types.h (form_t): added hook for compiler

2007-12-10  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: renamed dfsch_throw to dfsch_error

	* src/wrapper.c (dfsch_make_wrapper_type): support hash method in
	wrapper types

	* src/dfsch.c: removed scheme-like call/ec (idea is to replace it
	with CL-style catch/throw)

	* scm/test.scm ("control flow"): call/ec really seems badly broken.
