@@ -20,7 +20,7 @@ nobase_include_HEADERS = dfsch/lib/threads.h \
 
 lib_LTLIBRARIES     = libdfsch.la
 
-dfschlibexec_LTLIBRARIES = threads.la regex.la unix.la
+dfschlibexec_LTLIBRARIES = threads.la regex.la unix.la inet.la
 
 man_MANS = doc/dfsch-repl.1
 
